# kaiko-cpp-sdk

./: conanfile.py
src/: CMakeLists.txt
src/sdk/: sdk.grpc.pb.cc  sdk.grpc.pb.h  sdk.pb.cc  sdk.pb.h
src/sdk/stream/aggregated_state_price_v1/: request.grpc.pb.cc  request.grpc.pb.h  request.pb.cc  request.pb.h  response.grpc.pb.cc  response.grpc.pb.h  response.pb.cc  response.pb.h
src/sdk/stream/aggregates_direct_exchange_rate_v2/: request.grpc.pb.cc  request.grpc.pb.h  request.pb.cc  request.pb.h  response.grpc.pb.cc  response.grpc.pb.h  response.pb.cc  response.pb.h
src/sdk/stream/aggregates_spot_exchange_rate_v2/: request.grpc.pb.cc  request.grpc.pb.h  request.pb.cc  request.pb.h  response.grpc.pb.cc  response.grpc.pb.h  response.pb.cc  response.pb.h
src/sdk/stream/derivatives_instrument_metrics_v1/: commodity_kind.grpc.pb.cc  commodity_kind.grpc.pb.h  commodity_kind.pb.cc  commodity_kind.pb.h  request.grpc.pb.cc  request.grpc.pb.h  request.pb.cc  request.pb.h  response.grpc.pb.cc  response.grpc.pb.h  response.pb.cc  response.pb.h
src/sdk/stream/exotic_indices_v1/: request.grpc.pb.cc  request.grpc.pb.h  request.pb.cc  request.pb.h  response.grpc.pb.cc  response.grpc.pb.h  response.pb.cc  response.pb.h
src/sdk/stream/iv_svi_parameters_v1/: request.grpc.pb.cc  request.grpc.pb.h  request.pb.cc  request.pb.h  response.grpc.pb.cc  response.grpc.pb.h  response.pb.cc  response.pb.h
src/sdk/stream/orderbookl2_v1/: order.grpc.pb.cc  order.grpc.pb.h  order.pb.cc  order.pb.h  request.grpc.pb.cc  request.grpc.pb.h  request.pb.cc  request.pb.h  response.grpc.pb.cc  response.grpc.pb.h  response.pb.cc  response.pb.h
